--- a/config/manifest_headers.yml
+++ b/config/manifest_headers.yml
@@ -13,6 +13,10 @@ metadata:
   track: track
   event: event
   location: location
+  state: state
+  country: country
+  city: city
+  date: date
   year: year
   description: description
   model_year: model_year
