add new engine_type field to list of manifest fields

--- a/config/manifest_headers.yml
+++ b/config/manifest_headers.yml
@@ -30,9 +30,10 @@ metadata:
   hide: hide
   format: format
   collection_name: collection_name
+  engine_type: engine_type
 metadata_optional:
   format_authority: format_authority
-known_formats: 
+known_formats:
   - black-and-white film
   - color film
   - slides
