fix known format of glass negatives to match case used on website

--- a/config/manifest_headers.yml
+++ b/config/manifest_headers.yml
@@ -45,4 +45,4 @@ known_formats:
   - color negatives
   - black-and-white transparencies
   - color transparencies
-  - Glass negatives
+  - glass negatives
